# SHA-Intrinsics

./: CMakeLists.txt  sha-intrinsics.h  sha1-arm.c  sha1-arm.h  sha1-x86.c  sha1-x86.h  sha256-arm.c  sha256-arm.h  sha256-x86.c  sha256-x86.h  sha256.c  sha256.h  sha512-p8.cxx  sha512-p8.h  sha512.c  sha512.h
